# tools

./: .gitignore  422.xml  LICENSE  README.md  SpliteAndComplete.py  ToDatabase.py  chief_compliant.html  extract_cheif.py  extract_text.py  get_chief.py  main.py  navicat_crack.sh  readfile.py  xmltohtml.py
Bash/: check_kernel_update.sh
Bert/: BIOtoJSON.py  JSONtoBIO.py  union.py
CreateDatabase/: init.sql
EMR/: ToDatabase.py  desensitization.py  extract_text.py  get_chief.py  main.py  pyproject.toml  traverse.py  variables.py  xmltohtml.py
arch/pc/: pkgforeign  pkglist  pkglistexplicit
config/: .zshrc  vscode-settings.json
config/blog/: styles.styl
legacy/: extract_chief.py  getHTML.py  test.py  traverse_xml.py
uestc/: clockin.sh  yuketang.js
