[tool.poetry]
name = "XmlExtract"
version = "0.1.1"
description = "用于处理电子病历的脚本"
authors = ["zhang <zhangjk67@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pymysql = "^0.9.3"
regex = "^2020.4.4"
pyquery = "^1.4.1"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
